# tensor_compiler

./: .gitignore  CMakeLists.txt  README.md  graph.dot
backend/include/codegen/: codegen.h
backend/llvm/: codegen_stub.cpp
driver/: main.cpp
frontend/include/graph/: algorithms.h  dot.h  graph.h  node.h
frontend/include/ir/: lowering.h
frontend/include/onnx/: onnx_loader.h
frontend/src/: main.cpp
frontend/src/graph/: algorithms.cpp  dot.cpp  graph.cpp  node.cpp
frontend/src/onnx/: onnx_loader.cpp
midend/mlir/: lowering_stub.cpp
tests/: test_frontend_pipeline.cpp  test_graph.cpp  test_onnx_loader.cpp
